overflow issue solved

--- a/game.css
+++ b/game.css
@@ -107,10 +107,10 @@
     border-radius: 20px;
   }
   .blank-box-img{
-      position: relative;
   }
   .smallImg {
       width: 40px;
+      /* height: 150px; */
       position: absolute;
       /* background-color: #906d6d; */
   }
@@ -139,9 +139,12 @@
     box-shadow: 2px 2px 8px brown;
     z-index: 1;
     background: linear-gradient(#ffffffb8, #ffffffb8);
+    position: relative;
+    overflow: hidden;
+
   }
   body {
-    background-image: url("background-img.avif");
+    background-image: url("./images/background-img.avif");
     height: 100vh;
     width: 100%;
   }
